[tool.poetry]
name = "pyshelltest"
version = "0.0.0"
description = "Generate test cases for shell scripts"
authors = ["Ben <bnichs55@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bnichs/pyshelltest.git"
keywords = ["generation", "test", "case",]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Shells"
]
include = [
    "LICENSE",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
#style = "semver"
#format-jinja = """
#    {%- if distance == 0 -%}
#        {{ serialize_pep440(base, stage, revision) }}
#    {%- elif revision is not none -%}
#        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
#    {%- else -%}
#        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
#    {%- endif -%}
#"""
tagged-metadata = true
metadata = false
bump = false

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
attrs = "19.2.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pyshelltest --cov-report html"
log_level = "DEBUG"
log_cli = true
testpaths = [
]